able to initialize default processes + update process line for NPI
