# core/src/main/java/my/lokalix/planning/core/controllers/NpiOrderController.java
@@ -84,4 +84,20 @@ public class NpiOrderController {
     SWNpiOrder result = npiOrderService.abortNpiOrder(uid);
     return new ResponseEntity<>(result, HttpStatus.OK);
   }
+
+  @GetMapping("/{uid}/process")
+  public ResponseEntity<SWProcess> retrieveNpiOrderProcess(@PathVariable final UUID uid) {
+    SWProcess result = npiOrderService.retrieveNpiOrderProcess(uid);
+    return new ResponseEntity<>(result, HttpStatus.OK);
+  }
+
+  @PostMapping("/{uid}/process/lines/{lineUid}/status")
+  public ResponseEntity<SWOutputProcessLineUpdate> updateNpiOrderProcessLineStatus(
+      @PathVariable final UUID uid,
+      @PathVariable final UUID lineUid,
+      @Valid @RequestBody SWProcessLineStatusUpdateBody body) {
+    SWOutputProcessLineUpdate result =
+        npiOrderService.updateNpiOrderProcessLineStatus(uid, lineUid, body);
+    return new ResponseEntity<>(result, HttpStatus.OK);
+  }
 }
