# core/src/main/java/my/lokalix/planning/core/models/enums/ProcessLineStatus.java
@@ -1,0 +1,43 @@
+package my.lokalix.planning.core.models.enums;
+
+import lombok.Getter;
+
+public enum ProcessLineStatus {
+  NOT_STARTED("NOT_STARTED", "Not Started"),
+
+  IN_PROGRESS("IN_PROGRESS", "In Progress"),
+
+  COMPLETED("COMPLETED", "Completed"),
+
+  ABORTED("ABORTED", "Aborted");
+
+  private final String value;
+  @Getter private final String humanReadableValue;
+
+  ProcessLineStatus(String value, String humanReadableValue) {
+    this.value = value;
+    this.humanReadableValue = humanReadableValue;
+  }
+
+  public String getValue() {
+    return value;
+  }
+
+  public static ProcessLineStatus fromValue(String value) {
+    for (ProcessLineStatus b : ProcessLineStatus.values()) {
+      if (b.value.equals(value)) {
+        return b;
+      }
+    }
+    throw new IllegalArgumentException("Unexpected value '" + value + "'");
+  }
+
+  @Override
+  public String toString() {
+    return String.valueOf(value);
+  }
+
+  public boolean isFinalStatus() {
+    return this.equals(COMPLETED) || this.equals(ABORTED);
+  }
+}
